--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,69 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root{
+    --primary-color: #c0c0c0;
+    --primary-color-dark: #808080;
+    --alarm-color: #f80000;
+    --one-color: #0200fc;
+    --two-color: #017e00;
+    --three-color: #ff0000;
+    --four-color: #010000;
+    --five-color: #7f0300;
+    --six-color: #008080;
+    --seven-color: #000000;
+    --eight-color: #808080;
+    
+
+}
+@font-face{
+    font-family: DIGITALDREAM;
+    src: url("./assets/DIGITALDREAM.ttf");
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+*{
+    margin:0;
+    padding:0;
+}
+
+
+*::after,
+*::before{
+    margin:0;
+    padding:0;
+    box-sizing: inherit;
+}
+
+.flag{
+    background-image: url("./assets/flag.svg");
+    
+}
+
+
+.bomb{
+    background-image: url("./assets/bomb.svg");
+    background-color: red;
+}
+
+.cell-1{
+    color:var(--one-color);
+}
+.cell-2{
+    color:var(--two-color);
+}
+.cell-3{
+    color:var(--three-color);
+}
+.cell-4{
+    color:var(--four-color);
+}
+.cell-5{
+    color:var(--five-color);
+}
+.cell-6{
+    color:var(--six-color);
+}
+.cell-7{
+    color:var(--seven-color);
+}
+.cell-8{
+    color:var(--eight-color);
 }
